<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageSelect">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="328sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blk_elipse" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        app:layout_constraintBottom_toTopOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blk_elipse" />

    <Button
        android:id="@+id/guBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/gu"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/enBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/en"
        app:layout_constraintBottom_toBottomOf="@+id/guBtn"
        app:layout_constraintEnd_toStartOf="@+id/guBtn"
        app:layout_constraintTop_toTopOf="@+id/guBtn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/regText"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/reglog"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/guBtn"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guBtn"
        app:layout_constraintTop_toBottomOf="@+id/guBtn"
        />

    <Button
        android:id="@+id/hiBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/hi"
        app:layout_constraintBottom_toBottomOf="@+id/guBtn"
        app:layout_constraintStart_toEndOf="@+id/guBtn"
        app:layout_constraintTop_toTopOf="@+id/guBtn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="32dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/select"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lang"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/skip"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/regText"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/regText"
        app:layout_constraintTop_toBottomOf="@+id/regText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="171dp"
        android:layout_height="102dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/gruh"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="273dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

<!--
<androidx.drawerlayout.widget.DrawerLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <com.google.android.material.navigation.NavigationView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:background="@color/test"
       >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HelloWorld"/>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
-->