<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetPhnum">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="328sp"
        android:src="@drawable/blk_elipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="102dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/gruh"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="273dp"
        android:layout_height="85dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editPhoneNum"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:contentDescription="@string/enterNum_desc"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/submit"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:text="@string/reqOtp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/enterPhn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryC"
        android:layout_width="130dp"
        android:layout_height="39dp"

        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:ccp_defaultNameCode="IN"
        app:layout_constraintBottom_toBottomOf="@+id/editPhoneNum"
        app:layout_constraintEnd_toStartOf="@+id/editPhoneNum"
        app:layout_constraintTop_toTopOf="@+id/editPhoneNum"
        app:layout_constraintVertical_bias="0.0">

    </com.hbb20.CountryCodePicker>

    <TextView
        android:id="@+id/skip"
        android:layout_width="86dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

    <Button
        android:id="@+id/loginFake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="fake Login(+91 9512492862)"
        app:layout_constraintEnd_toEndOf="@+id/skip"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/skip"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

</androidx.constraintlayout.widget.ConstraintLayout>